Closed Bug 377732 Opened 17 years ago Closed 17 years ago

Firefox keep crashing after "Previous Session Restore" dialog, @nsRootAccessibleWrap::HandleEventWithTarget

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: ginnchen+exoracle, Assigned: ginnchen+exoracle)

References

Details

(Keywords: crash)

Attachments

(1 file)

After you got the "Previous Session Restore" dialog, Firefox will crash no matter you choose which button.

Stacks:
#10 0xb7483f55 in std::set_unexpected () from /usr/lib/libstdc++.so.6
#11 0xb7483f92 in std::terminate () from /usr/lib/libstdc++.so.6
#12 0xb7484675 in __cxa_pure_virtual () from /usr/lib/libstdc++.so.6
#13 0xb6e438d7 in nsRootAccessibleWrap::HandleEventWithTarget (this=0x876fed8, 
    aEvent=0x8532408, aTargetNode=0x8771128) at nsRootAccessibleWrap.cpp:106
#14 0xb6e12caa in nsRootAccessible::FireCurrentFocusEvent (this=0x876fed8)
    at nsRootAccessible.cpp:544
#15 0xb6e12d39 in nsRootAccessible::FireFocusCallback (aTimer=0x87710e8, 
    aClosure=0x876fed8) at nsRootAccessible.cpp:890
#16 0xb7cfea68 in nsTimerImpl::Fire (this=0x87710e8) at nsTimerImpl.cpp:38

It is an injection of bug 368191.
In accessible/src/base/nsAccessNode.cpp,
focusedNode is not assigned if (focusedWinInternal) failed.
Attached patch patchSplinter Review
Attachment #261761 - Flags: review?(aaronleventhal)
This looks very similar to bug 377123.
Comment on attachment 261761 [details] [diff] [review]
patch

Thanks! Please get this in right away. It also fixes bug 377123.
Attachment #261761 - Flags: review?(aaronleventhal) → review+
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
2007041704 still crashes when closing Page Info:
TB31271046E, TB31271212Y, TB31271351M
I can't tell, but it seems that attachment 261757 [details] [diff] [review] had something to address that crash.
Didn't crash in profile manager or in session restore dialog as of yet.
I think we need a separate bug for page info.
to comment #5 & #6: bug 377767
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: