Bug 377732 Firefox keep crashing after "Previous Session Restore" dialog,@nsRootAccessibleWrap::HandleEventWithTargetr=aaronleventhal